--- a/dual.html
+++ b/dual.html
@@ -87,13 +87,13 @@
                 <div class="form-group">
                     <label for="optimal_size_low">Optimal Items</label>
                     <select id="optimal_size_low">
-                        <option value="random">Random</option>
+                        <option value="no_filter">No filter</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="sahni_k_low">Sahni-k</label>
                     <select id="sahni_k_low">
-                        <option value="random">Random</option>
+                        <option value="no_filter">No filter</option>
                         <option value="0">0</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -118,13 +118,13 @@
                 <div class="form-group">
                     <label for="optimal_size_high">Optimal Items</label>
                     <select id="optimal_size_high">
-                        <option value="random">Random</option>
+                        <option value="no_filter">No filter</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="sahni_k_high">Sahni-k</label>
                     <select id="sahni_k_high">
-                        <option value="random">Random</option>
+                        <option value="no_filter">No filter</option>
                         <option value="0">0</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -221,6 +221,41 @@
                 <div class="form-group seed-inline">
                     <label for="seed">Seed <span style="font-weight:400;color:#aaa">(optional)</span></label>
                     <input type="text" id="seed" value="12345" placeholder="e.g. 12345">
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="greedyCapSelect">Max greedy proximity to optimal <span class="info-icon" tabindex="0">ⓘ<div class="info-tooltip">Reject instances where the greedy solution is too close to optimal.<br><strong>99%:</strong> reject if greedy ≥ 99% of OPT.<br>Lower % = stricter (greedy must be further from optimal).</div></span></label>
+                    <select id="greedyCapSelect">
+                        <option value="no_filter">No filter</option>
+                        <option value="1.00">100%</option>
+                        <option value="0.99">99%</option>
+                        <option value="0.98">98%</option>
+                        <option value="0.97">97%</option>
+                        <option value="0.96">96%</option>
+                        <option value="0.95">95%</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="forgivenessCapSelect">Max # feasible bundles within 90% of optimal <span class="info-icon" tabindex="0">ⓘ<div class="info-tooltip">Limits how many feasible subsets achieve ≥ 90% of optimal value.<br>Lower cap = fewer near-optimal alternatives = less "forgiving" instance.</div></span></label>
+                    <select id="forgivenessCapSelect">
+                        <option value="no_filter">No filter</option>
+                        <option value="5">5</option>
+                        <option value="10">10</option>
+                        <option value="15">15</option>
+                        <option value="20">20</option>
+                        <option value="25">25</option>
+                        <option value="30">30</option>
+                        <option value="35">35</option>
+                        <option value="40">40</option>
+                        <option value="45">45</option>
+                        <option value="50">50</option>
+                        <option value="75">75</option>
+                        <option value="100">100</option>
+                        <option value="150">150</option>
+                        <option value="200">200</option>
+                    </select>
                 </div>
             </div>
 
