--- a/batch.html
+++ b/batch.html
@@ -324,6 +324,10 @@
                         <option value="0.05">5 %</option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="minFeasibleInput">Min feasible combinations <span class="info-icon" tabindex="0">ⓘ<div class="info-tooltip">Reject instances where either budget has fewer than this many feasible item subsets.<br><strong>No limit:</strong> leave empty. Only evaluated when items ≤ 20.</div></span></label>
+                    <input type="number" id="minFeasibleInput" placeholder="No limit" min="1">
+                </div>
             </div>
 
             <div class="button-row">
