--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@
                         <option value="0.05">5 %</option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="minFeasibleInput">Min feasible combinations <span class="info-icon" tabindex="0">ⓘ<div class="info-tooltip">Reject instances with fewer than this many feasible item subsets that fit within the budget.<br><strong>No limit:</strong> leave empty. Only evaluated when items ≤ 20.</div></span></label>
+                    <input type="number" id="minFeasibleInput" placeholder="No limit" min="1">
+                </div>
             </div>
 
             <div class="button-row">
